<resources>
    <string name="app_name">SparkOwnerApp</string>
    <string name="image_download_started">image download start</string>
    <string name="image_download_failed">image download failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="onboarding_text_1">Now you can easily manage your Schedule and Task from home Screen.</string>
    <string name="onboarding_text_2">"In new Sparktan App have New Feature on Dashboard  that helps you to check your CRM "</string>
    <string name="onboarding_text_3">Now you can easily make Event, Appointment, and Task. Check all Report, Invoices, Attendance logs from you mobile.</string>
    <string name="lets_go">Let’s get started</string>
    <string name="onboarding_viewpager">onboarding viewPager</string>
    <string name="already_know_so_sign_in">Already know so Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="go_ahead">Go ahead.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="jos_creative_gmail_com">jos.creative@gmail.com</string>
    <string name="password">Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_valid_email">Enter Valid email address</string>
    <string name="please_enter_valid_password">password is less than 6 characters</string>
    <string name="connected_location">connected location</string>
    <string name="enter_email">Enter Email</string>
    <string name="okay">Okay</string>
    <string name="password_link_is_sent_to_your_email">Password Link is sent to your Email</string>
    <string name="turn_on_your_location">Turn On your Location</string>
    <string name="you_are_outside_the_location">You are outside the Location</string>
    <string name="i_am_in">I Am In</string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="send_email">Send Email</string>
    <string name="change_location">Change Location</string>
    <string name="spark_membership">Spark Membership</string>
    <string name="ron_sell">Ron sell</string>
    <string name="contacts">Contacts</string>
    <string name="quickly_add_a_contact">Quickly Add a Contact</string>
    <string name="view_contacts">View Contacts</string>
    <string name="task">Task</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_type">Calender Type</string>
    <string name="schedule">Schedule</string>
    <string name="reports">Reports</string>
    <string name="invoice_history">Invoice History</string>
    <string name="attendance_reports">Attendance Reports</string>
    <string name="view_time_slips">View Time Slips</string>
    <string name="current_stripes">Current Stripes</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="nav_home">Home</string>
    <string name="nav_message">Message</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_leads">Leads</string>
    <string name="nav_more">More</string>
    <string name="nav_time_slip_history">View Time Slip</string>
    <string name="nav_clock_in_out">Clock In/Out</string>
    <string name="nav_who_is_in">Who Is In</string>
    <string name="nav_notification">Notification</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_Birthday">Enter Birthday (DOB)</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_marketing_source_details">Enter Marketing Source Details</string>
    <string name="select_contact_type">Select Contact Type</string>
    <string name="select_tags">Select Tags</string>
    <string name="enter_marketing_source">Enter Marketing Source </string>
    <string name="referred_by">Referred By</string>
    <string name="select_contact_name">Select Contact Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="tags">Tags</string>
    <string name="marketing_source">Marketing Source</string>
    <string name="marketing_source_details">Marketing Source Details</string>
    <string name="contact_type">Contact Type</string>
    <string name="prospect_phase_title">Prospect Phase</string>
    <string name="no_contacts_by_this_name">No contacts by this name</string>
    <string name="No_Data_Found">No Data Found</string>
    <string name="select_type">Select Type</string>
    <string name="rate_us">Rate Us</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure, you want to Log out?</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="cancel">cancel</string>
    <string name="how_was_your_overall_nexperience">How was your overall \nexperience?</string>
    <string name="it_will_help_us_to_serve_you_better">It will help us to serve you better</string>
    <string name="what_is_wrong">What is Wrong?</string>
    <string name="note">Note</string>
    <string name="how_can_we_do_better">How can we do better?</string>
    <string name="_0_150">0/150</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="ver_1_0_0">Ver 1.0.0</string>
    <string name="please_select_emoji">Please select emoji</string>
    <string name="please_enter_note">Please enter note</string>
    <string name="select_any_option">Select any option</string>
    <string name="submit">Submit</string>
    <string name="Select">Select</string>
    <string name="sample_chip">Sample Chip</string>
    <string name="contacts_who_are_tagged">Contacts who are tagged:</string>
    <string name="select_tagged_contact">Select tagged Contact</string>
    <string name="contact_who_are_not_tagged">Contact who are not tagged:</string>
    <string name="select_contact_not_tagged">Select Contact Not Tagged</string>
    <string name="age_group">Age Group</string>
    <string name="age_range">Age Range</string>
    <string name="membership">Membership</string>
    <string name="class_roaster">Class Roaster</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="select_roaster">Select Roaster</string>
    <string name="select_membership">Select Membership</string>
    <string name="select_month">Select Month</string>
    <string name="has_birthday_in">Has Birthday In:</string>
    <string name="select_age_group">Select Age Group</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_date_time">Start Date and Time</string>
    <string name="end_date_time">End Date and Time</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="contacts_entered_acquired_between">Contacts Entered / Acquired Between</string>
    <string name="all_contacts">All Contacts</string>
    <string name="time_slips">Time Slips</string>
    <string name="time_clock">Time Clock</string>
    <string name="who_is_in">Who\'s In</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="please_select_a_first_name_to_continue">Please enter a First Name to continue</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="filter_by">Filter By</string>
    <string name="in_and_out"><![CDATA[In & Out]]></string>
    <string name="duration">Duration</string>
    <string name="this_pay_period">This pay period</string>
    <string name="today">Today</string>
    <string name="clock_out">Clock Out</string>
    <string name="start_time">Start Time</string>
    <string name="clock_in">Clock In</string>
    <string name="please_wait_for_a_moment">Please wait for a moment</string>
    <string name="home">Home</string>
    <string name="filter_contacts">Filter Contacts</string>
    <string name="ronny_demokrat">Ronny Demokrat</string>
    <string name="ronnydemokrat_mac_com">ronnydemokrat@mac.com</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="close">close</string>
    <string name="select_class_roster">Select Class Roster</string>
    <string name="lets_get_to_work">Lets Get to Work</string>
    <string name="anas_anwer">Anas Anwer</string>
    <string name="anas_gmail_com">anas@gmail.com</string>
    <string name="invoices">Invoices</string>
    <string name="invoices_details">invoice #%1$d</string>
    <string name="attendance">Attendance</string>
    <string name="ranks">Ranks</string>
    <string name="sms">SMS</string>
    <string name="notes">Notes</string>
    <string name="entered">Entered</string>
    <string name="august_3_2024">August 3, 2024</string>
    <string name="contact_id">Contact ID</string>
    <string name="male">Male</string>
    <string name="vacation">Vacation</string>
    <string name="on_vacation_now_2024_06_04_to_2024_06_15">On Vacation Now (2024/06/04 to 2024/06/15)</string>
    <string name="need_to_see_regarding_the_attendance_issue">Need to see regarding the attendance issue.</string>
    <string name="need_to_see">Need To See?</string>
    <string name="covid_vax_certificate_on_file">Covid Vax Certificate on File</string>
    <string name="student_phase">Student Phase</string>
    <string name="start_regular_program">Start Regular Program</string>
    <string name="yes">Yes</string>
    <string name="appointments">Appointments</string>
    <string name="using_student_app">Using Student App</string>
    <string name="mobile_phone_1">Mobile Phone#1</string>
    <string name="mobile_phone_2">Mobile Phone#2</string>
    <string name="_998_999_8900_father">(998) 999-8900 (Father)</string>
    <string name="_998_999_8900_mother">(998) 999-8900 (Mother)</string>
    <string name="last_seen">Last Seen</string>
    <string name="_2024_06_06_yesterday">2024/06/06 (yesterday)</string>
    <string name="connected_contacts">Connected Contacts</string>
    <string name="authorized_to_drop_off_pickup">Authorized To Drop off/Pickup</string>
    <string name="hamza_techelix_aqib_murtaza2">Hamza Techelix, aqib murtaza2</string>
    <string name="cant_feel_anything">Cant Feel, anything.</string>
    <string name="medical_concerns">Medical Concerns</string>
    <string name="about_me">About Me</string>
    <string name="i_am_a_student">I am a Student</string>
    <string name="guardian_1_name_harry_1">Guardian 1 Name</string>
    <string name="harry_osbourn">Harry Osbourn</string>
    <string name="guardian_2_name">Guardian 2 Name</string>
    <string name="parker_peter">Parker Peter</string>
    <string name="add_note">Add Note</string>
    <string name="enter_your_notes">Enter Your Note</string>
    <string name="select_quick_note">Select Quick Note..</string>
    <string name="please_select_notes">Please Selected Your Notes</string>
    <string name="set_follow_up_date">Set Follow-up Date</string>
    <string name="select_follow_up_date">Select Follow-up Date</string>
    <string name="assign_to">Assign To</string>
    <string name="who_is_responsible_to_follow_up">Who is responsible to follow up?</string>
</resources>