<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.contacts.AddContacts.AddContactsFragment">

    <ScrollView
        android:id="@+id/addContactsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="vertical">


        <com.sparkmembership.sparkowner.presentation.components.DefaultEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:inputType="textPassword"
            app:labelText="@string/enter_middle_name"
            app:hintText="@string/enter_middle_name"
            app:errorText="@string/enter_middle_name" />


        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/contactTypeTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/contact_type" />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/spinner_contact_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_border"
            android:padding="@dimen/_10sdp"
            android:drawableEnd="@drawable/spinner_dropdown_icon"
            android:hint="@string/select_contact_type"
            android:textColorHint="@color/colorAppTextSecondary"
            style="@style/TextView_Regular_primary"
            android:layout_marginBottom="@dimen/_8sdp"
            />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/PhaseTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:visibility="gone"
            android:text="@string/prospect_phase_title" />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/spinner_phase"
            style="@style/TextView_Regular_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_border"
            android:padding="@dimen/_10sdp"
            android:drawableEnd="@drawable/spinner_dropdown_icon"
            android:hint="Select Phase"
            android:visibility="gone"
            android:textColorHint="@color/colorAppTextSecondary"
            android:layout_marginBottom="@dimen/_8sdp"
            />


        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/firstNameTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/first_name" />

        <com.sparkmembership.sparkowner.presentation.components.EditText
            android:id="@+id/first_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:padding="@dimen/_10sdp"
            android:hint="@string/enter_first_name" />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/error_message_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/medium_red"
            android:visibility="gone"
            android:text="@string/please_select_a_first_name_to_continue"
            android:textSize="@dimen/_10sdp"
            />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/MiddleNameTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/middle_name" />

        <com.sparkmembership.sparkowner.presentation.components.EditText
            android:id="@+id/middle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/enter_middle_name" />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/LastNameTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/last_name" />

        <com.sparkmembership.sparkowner.presentation.components.EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/_8sdp"
            android:padding="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name" />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/BirthdayTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/birthday" />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_border"
            android:layout_marginBottom="@dimen/_8sdp"
            style="@style/TextView_Regular_primary"
            android:padding="@dimen/_10sdp"
            android:focusableInTouchMode="true"
            android:drawableEnd="@drawable/calendar_icon"
            android:textColorHint="@color/colorAppTextSecondary"
            android:hint="Birthday (DOB)"
             />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/spinnerGenderTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/gender" />


        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/spinner_gender"
            style="@style/TextView_Regular_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/edittext_rounded_border"
            android:drawableEnd="@drawable/spinner_dropdown_icon"
            android:hint="@string/select_gender"
            android:padding="@dimen/_10sdp"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAppTextSecondary"
            />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/emailAddressTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/email_address" />

        <com.sparkmembership.sparkowner.presentation.components.EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:hint="@string/enter_email_address"
            android:layout_marginBottom="@dimen/_8sdp"
            android:inputType="textEmailAddress" />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/error_message_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/medium_red"
            android:text="@string/please_enter_a_valid_email_address"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/mobileNumberTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/phone_number" />

        <com.sparkmembership.sparkowner.presentation.components.EditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:hint="@string/enter_phone_number"
            android:layout_marginBottom="@dimen/_8sdp"
            android:inputType="phone" />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/tagsTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/tags" />

        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/spinner_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_border"
            android:padding="@dimen/_10sdp"
            android:drawableEnd="@drawable/spinner_dropdown_icon"
            android:hint="@string/select_tags"
            android:textColorHint="@color/colorAppTextSecondary"
            style="@style/TextView_Regular_primary"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="@dimen/_8sdp"
            />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacing="8dp"
            app:singleLine="false"
            app:singleSelection="false" />


        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/marketingSourceTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/marketing_source" />


        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/spinner_marketing_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_border"
            android:padding="@dimen/_10sdp"
            android:drawableEnd="@drawable/spinner_dropdown_icon"
            android:hint="@string/enter_marketing_source"
            android:textColorHint="@color/colorAppTextSecondary"
            style="@style/TextView_Regular_primary"
            android:layout_marginBottom="@dimen/_8sdp"
            />


        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/marketingSourceDetailsTitle"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/marketing_source_details" />

        <com.sparkmembership.sparkowner.presentation.components.EditText
            android:id="@+id/marketing_source_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:padding="@dimen/_10sdp"
            android:hint="@string/enter_marketing_source_details"/>


        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/referredBy"
            style="@style/TextView_medium_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/referred_by" />


        <com.sparkmembership.sparkowner.presentation.components.TextView
            android:id="@+id/spinner_referred_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_border"
            android:padding="@dimen/_10sdp"
            android:drawableEnd="@drawable/spinner_dropdown_icon"
            android:hint="@string/select_contact_name"
            android:textColorHint="@color/colorAppTextSecondary"
            android:textColor="@color/colorAppTextPrimary"
            style="@style/TextView_Regular_primary"
            android:layout_marginBottom="@dimen/_8sdp"
            />


        <com.sparkmembership.sparkowner.presentation.components.CustomButton
            android:id="@+id/button_add_contact"
            style="@style/logoutButtonstyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="Add Contact"
            />

    </LinearLayout>
</ScrollView>
    <include
        android:id="@+id/includedProgressLayout"
        layout="@layout/layout_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>

