<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center">


    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_160sdp"
        android:src="@drawable/image_logout"
        android:layout_gravity="center" />

    <com.sparkmembership.sparkowner.presentation.components.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        style="@style/textview_semi_bold_accent"
        android:layout_marginTop="16dp"
        android:gravity="center" />


    <com.sparkmembership.sparkowner.presentation.components.TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_log_out"
        style="@style/TextView_medium_primary"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.sparkmembership.sparkowner.presentation.components.CustomButton
            android:id="@+id/btnCancel"
            style="@style/cancelButtonstyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/_5sdp"
            />

        <com.sparkmembership.sparkowner.presentation.components.CustomButton
            android:id="@+id/btnDialogButton"
            style="@style/logoutButtonstyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/yes_logout" />


    </LinearLayout>


</LinearLayout>
